Bug 822404 - Shouldn't use WANT_NEW_SURFACE when uploading DOM elements to WebGL textures - r=jgilbert